fixed the buttons in the main screen on mobile 1.1

--- a/style.css
+++ b/style.css
@@ -43,19 +43,18 @@
     }
     
     button span {
-        font-size: 12px;
-        letter-spacing: 3px;
+        font-size: 14px;
+        letter-spacing: normal;
     }
     
-    .choices button {
-        display: flex;
+    .choices button, .resultBoard button{
         align-items: center;
         justify-content: center;
-        padding-bottom: 7px;
         margin-top: 40px;
-        border: 5px solid #313131;
+        border: 4px solid #313131;
         border-radius: 5px;
         cursor: pointer;
+        padding: 2px;
     }
     
     button:hover {
@@ -67,8 +66,8 @@
     
     
     .selectionBoard .rockImg, .selectionBoard .paperImg, .selectionBoard .scissorsImg {
-        height: 100px;
-        width: 100px;
+        height: 150px;
+        width: 150px;
         border: 6px solid #313131;
         background-color: #2C2C30;
         border-radius: 5px;
